# Domo-Garden

./: .gitignore  LICENSE  README.md
PCB/: project.kicad_pcb  project.kicad_prl  project.kicad_pro  project.kicad_sch  project.kicad_sch-bak  sym-lib-table  ~project.kicad_pcb.lck
PCB/Components/EFR32MG22-miniboard-main/: EFR32MG22_module.kicad_pro  EFR32MG22_module.kicad_sch
PCB/Components/capa10uf6.3v_CC0805KKX5R5BB106/: CAPC2012X70.kicad_mod
PCB/Components/photoresistor_PDV-P8003/: PDV-P8003.step
PCB/node/: #auto_saved_files#  fp-lib-table  node.kicad_prl  node.kicad_pro  node.kicad_sch  ~node.kicad_sch.lck
PCB/node/Components/EFR32MG22-miniboard-main/: fp-lib-table  sym-lib-table
PCB/node/Components/EFR32MG22-miniboard-main/eec.pretty/: CNC_Tech-3220-10-0100-00-0-0-MFG.kicad_pro
PCB/node/Components/EFR32MG22-miniboard-main/smd-2x5-connector-lib/: 3220-10-0300-00-TR.dcm  3220-10-0300-00-TR.lib  3220-10-0300-00-TR.mod
PCB/node/Components/Usb-Uart_INTERFACE-CP2102-GMR_QFN28_/: INTERFACE-CP2102-GMR_QFN28_.kicad_sym  QFN28G_0.5-5X5MM.kicad_mod
PCB/node/Components/capa10uf6.3v_CC0805KKX5R5BB106/: CC0805KKX5R5BB106.kicad_sym
PCB/node/Components/photoresistor_PDV-P8003/: PHODET_PDV-P8103.kicad_mod
PCB/node/aerial_node/: aerial_node.kicad_pro  aerial_node.kicad_sch  sym-lib-table
PCB/node/aerial_node/aerial_node/: aerial_node.kicad_prl  aerial_node.kicad_pro
Tests/aerial_node/Z3Switch/: .cproject  .project  .projectlinkstore  Z3Switch.pintool  Z3Switch.slcp  Z3Switch.slps  vscode.conf
Tests/aerial_node/Z3Switch/Z3Switch_cmake/: CMakeLists.txt  CMakePresets.json  Z3Switch.cmake  toolchain.cmake
Tests/aerial_node/Z3Switch/autogen/: .crc_config.crc  linkerfile.ld  sl_cli_command_table.c  sl_cli_command_table.html  sl_cluster_service_gen.c  sl_cluster_service_gen.h  sl_component_catalog.h  sl_event_handler.c  sl_power_manager_handler.c  sl_rail_util_ieee802154_phy_select.c  sl_rail_util_ieee802154_stack_event.c  sli_mbedtls_config_autogen.h  sli_psa_config_autogen.h  zap-cli.c  zap-command.h  zap-config.h  zap-enabled-incoming-commands.h  zap-event.c  zap-event.h  zap-print.h  zigbee_af_cluster_functions.h  zigbee_common_callback_dispatcher.c  zigbee_common_callback_dispatcher.h  zigbee_stack_callback_dispatcher.c  zigbee_stack_callback_dispatcher.h  zigbee_zcl_callback_dispatcher.c  zigbee_zcl_callback_dispatcher.h
Tests/aerial_node/Z3Switch/config/: pin_config.h  sl_cli_config.h  sl_iostream_eusart_vcom_config.h  sl_simple_button_btn1_config.h  sl_simple_led_led0_config.h  sl_zigbee_pro_leaf_stack_config.h  zigbee_device_config.h
Tests/aerial_node/blink_baremetal/: .cproject  .project  .projectlinkstore  blink_baremetal.slcp  blink_baremetal.slps  main.c  vscode.conf
Tests/aerial_node/blink_baremetal/autogen/: .crc_config.crc  sl_component_catalog.h  sl_event_handler.c
Tests/aerial_node/blink_baremetal/blink_baremetal_cmake/: CMakeLists.txt  CMakePresets.json  blink_baremetal.cmake
Tests/aerial_node/gpd-switch/: .cproject  .project  .projectlinkstore  app_init.c  app_process.c  custom.c  custom.h  gpd-switch.slcp  gpd-switch.slps  vscode.conf
Tests/aerial_node/gpd-switch/autogen/: .crc_config.crc  linkerfile.ld  sl_cli_command_table.c  sl_cli_command_table.html  sl_cli_handles.h  sl_cli_instances.c  sl_component_catalog.h  sl_event_handler.c  sl_rail_util_init.c  sl_rail_util_init.h  sli_mbedtls_config_autogen.h  sli_psa_config_autogen.h
Tests/aerial_node/gpd-switch/config/: gpd-apps-config.h  sl_cli_config_gpdCli.h  sl_iostream_eusart_vcom_config.h  sl_rail_util_init_gpdrail_config.h  sl_simple_button_btn0_config.h
Tests/aerial_node/gpd-switch/gpd-switch_cmake/: CMakeLists.txt  CMakePresets.json  gpd-switch.cmake  gpd-switch_project.cmake
specs/: AerialNode.md
