# Define minimal required version of CMake.
cmake_minimum_required(VERSION "3.25")

# Project definition
project(
	gpd-switch
	VERSION 1.0
	LANGUAGES C CXX ASM
)

# Include the definition of the slc_gpd-switch target,
# which contains the content of the SLC project
include(gpd-switch.cmake)

add_executable(gpd-switch
    # Add additional sources here
)

target_include_directories(gpd-switch PUBLIC
    # Add additional include paths here
)

target_compile_definitions(gpd-switch PUBLIC
    # Add additional macros here
)

target_compile_options(gpd-switch PUBLIC
    # Set additional compiler flags here
)

target_link_options(gpd-switch PUBLIC
    # Set additional linker flags here
)

# Link with the content defined in the SLC project
target_link_libraries(gpd-switch PRIVATE
    slc_gpd-switch
)

# Include managed project content if available
include(gpd-switch_project.cmake OPTIONAL RESULT_VARIABLE managed_project)
if(managed_project)
    message(STATUS "Using managed project content from ${managed_project}")
endif()

# Force the gcc linker command
set_target_properties(gpd-switch PROPERTIES LINKER_LANGUAGE C)

# Create .bin, .hex and .s37 artifacts after building the project
add_custom_command(TARGET gpd-switch
    POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} -O srec "$<TARGET_FILE:gpd-switch>" "$<TARGET_FILE_DIR:gpd-switch>/$<TARGET_FILE_BASE_NAME:gpd-switch>.s37"
    COMMAND ${CMAKE_OBJCOPY} -O ihex "$<TARGET_FILE:gpd-switch>" "$<TARGET_FILE_DIR:gpd-switch>/$<TARGET_FILE_BASE_NAME:gpd-switch>.hex"
    COMMAND ${CMAKE_OBJCOPY} -O binary "$<TARGET_FILE:gpd-switch>" "$<TARGET_FILE_DIR:gpd-switch>/$<TARGET_FILE_BASE_NAME:gpd-switch>.bin" 
)

# Run post-build pipeline to perform additional post-processing
if(post_build_command)
add_custom_command(TARGET gpd-switch
    POST_BUILD
    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/..
    COMMAND ${post_build_command}
)
endif()